packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__syntax_errors__tests__should_return_error_when_assignment_lhs_not_lvalue.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/syntax_errors.rs
description: def 5 = 6
expression: formatted
---
!Err |-
  test.mj:1:5
    |
  1 | def 5 = 6
    |     ^
  Syntax Error: Expected variable name or table unpack
